# DEM_ConnectedComponents

./: ConnectedComponent_DEM_example.ipynb  LICENSE  README.md  connectedComponentsFunctions.py  connectedComponentsRun.py  debrisBasins.tif  debrisBasins_final_CN.csv  debrisBasins_final_CN.shp  debrisBasins_final_ConnectedComponents_7_0.23_5.csv  debrisBasins_final_ConnectedComponents_streams_7_0.23_5.csv  setup.cfg  setup.py  testClip.driver  testClip.hdr  testClip_CN.shp  testClip_ConnectedComponents_7_0.23_5.csv  testClip_ConnectedComponents_7_0.23_5_inAOI.csv  testClip_RNI.tif  testMask.dbf  testMask.shp  testMask.shx
.ipynb_checkpoints/: ConnectedComponent_DEM_example-checkpoint.ipynb
example/: ConnectedComponent_DEM_example.ipynb  connectedComponentsRun.py  debrisBasins_3m.bil.REMOVED.git-id  debrisBasins_3m.bil.aux.xml  debrisBasins_3m.driver  debrisBasins_3m.hdr  debrisBasins_3m.tif  debrisBasins_3m_CN.shp  debrisBasins_3m_ConnectedComponents_7_0.21_5.csv  debrisBasins_3m_ConnectedComponents_7_0.23_5.csv  debrisBasins_3m_ConnectedComponents_streams_7_0.21_5.csv  debrisBasins_3m_ConnectedComponents_streams_7_0.23_5.csv  debrisBasins_3m_MChiSegmented.csv  debrisBasins_3m_RNI.tif  debrisBasins_final.driver  debrisBasins_final.tif  debrisBasins_final_CN.shx  debrisBasins_final_ConnectedComponents_7_0.23_5.csv  debrisBasins_final_ConnectedComponents_streams_7_0.23_5.csv  debrisBasins_final_MChiSegmented.csv  run_DEM_ConnectedComponents.py  testClip_3m.bil.aux.xml  testClip_3m.driver  testClip_3m.hdr  testClip_3m_CN.shp  testClip_3m_CN.shx  testClip_3m_RNI.tif  (+10 more)
(+5 files in other folders)
