[metadata]
name = connectedComponents
version = 0.1
author = Ariane Mueting
author_email = mueting@uni-potsdam.de
description = DEM Connected Component calculation for debris-flow detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UP-RS-ESP/DEM_ConnectedComponents
project_urls =
    Bug Tracker = https://github.com/UP-RS-ESP/DEM_ConnectedComponents/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
